#85 Cleanup unnecessary read/write locks